Fix : Category-list overflow just x axis

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -93,7 +93,7 @@ img.avatar {
 .category-list {
   display: flex;
   gap: 1rem;
-  overflow: scroll;
+  overflow-x: scroll;
 }
 
 .category-item {
